--- a/style.css
+++ b/style.css
@@ -1,16 +1,65 @@
 body{
+    margin: 0;
     font-family: 'Croissant One', cursive;
 }
-.name{
+.orange{
     color: rgb(227, 166, 86);
 }
 .half_portion{
     float: left;
     width: 40%;
     margin: 5%;
-    padding:auto;
+    
     
 }
 .half_portion img{
-    width: 100%;
+    width: 75%;
+}
+.half_portion{
+background-image: url(images/top-banner.png);
+background-repeat: no-repeat;
+
+}
+.link_button{
+    text-decoration: none;
+    background-image: linear-gradient(lightSalmon, tomato);
+    padding: 10px 6px;
+    border-radius: 2px;
+    color: #fff;
+    font-weight: 700;
+}
+
+section{
+    height: 200px;
+    padding-bottom: 5%;
+}
+.dream_area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+
+}
+.ex{
+    margin: 0;
+    text-align:justify;
+}
+.single-expericence{
+    box-shadow: 8px 8px 40px grey;
+    border-radius: 5px;
+    height: 100%;
+    background-color: #fff;
+}
+.expericnce-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+
+.break{
+    padding-bottom: 40px;
+}
+
+footer p{
+    text-align: center;
 }
